# Physical-AI-and-Humanoid-Robotics-Course-book-ps

./: .gitignore  DEPLOYMENT_INSTRUCTIONS.md  README.md  agent.py  api.py  api_models.py  app.py  rag-agent-checklist.md  rag-agent-spec.md  tmpclaude-6935-cwd
book-backend/: .gitignore  API_INTEGRATION_DOCS.md  README.md  agent.py  app.py  data-model.md  demonstrate_agent.py  ingest_books.py  main.py  pyproject.toml  quickstart.md  requirements.txt  retrieve.py  tasks.md  test_agent.py  test_api_errors.py  test_exact_content.py  test_ingestion.py  test_retrieval.py  test_retrieval_functionality.py  test_with_your_content.py  tmpclaude-212b-cwd  tmpclaude-52a6-cwd
book-backend/contracts/: functions.md
book-backend/tests/: test_ingestion.py
book-frontend/: .env.production  deploy.sh  docusaurus.config.ts  package-lock.json  sidebars.ts  tmpclaude-a49f-cwd  tsconfig.json  vercel.json
book-frontend/docs/: intro.md
hf_space_temp/: api.py  requirements.txt  space.yml
history/adr/: 004-vla-architecture.md  007-documentation-technology-stack.md  008-content-integration-approach.md  009-system-integration-contract.md
huggingface_space_backend/: api.py
specs/001-ros2-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-web-ingestion-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+187 files in other folders)
